Fix #104: Convert non standard characters to _ in path of ArtemisTestResource